--- a/pm2.config.json
+++ b/pm2.config.json
@@ -1,7 +1,7 @@
 {
   "apps": [
     {
-      "name": "RealWorld",
+      "name": "RealWorldsss",
       "script": "npm",
       "args": "start"
     }
